@@ -221,6 +221,7 @@ Version 1.3-svn:
      this means the user has to rediscover all available terrains.
    * fixed a bug which returned wrong values if a random number was negative
    * max level advancements now raise the advance and post_advance events
+   * [effect] can now remove attacks with the remove_attacks key
  * sound
    * new or revised sounds: morning star, holy magic.
    * add advanced sound tab to pref allowing you to play with sample_rate and
